<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/My_profile"
            android:icon="@drawable/my_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/Folowers"
            android:icon="@drawable/users"
            android:title="@string/folowers" />
        <item
            android:id="@+id/Posts"
            android:icon="@drawable/posts"
            android:title="@string/posts" />
        <item
            android:id="@+id/Favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/favorites" />
        <item
            android:id="@+id/Favorite_post"
            android:icon="@drawable/favorite"
            android:title="@string/favorite_posts" />
        <item
            android:id="@+id/Users"
            android:icon="@drawable/ic_team"
            android:title="@string/users" />
        <item
            android:id="@+id/About_us"
            android:icon="@drawable/about_us"
            android:title="@string/About_us" />
        <item
            android:id="@+id/Language"
            android:icon="@drawable/language"
            android:title="@string/language" />
        <item
            android:id="@+id/Log_out"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />
    </group>


</menu>
