<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom = "2dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:padding="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_your_post"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/add_post_title"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_title"
            android:background="@drawable/dialog"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:height="70dp"/>

        <EditText
            android:id="@+id/add_post_text"
            android:padding="10dp"
            android:hint="@string/post_text"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/dialog"
            android:scrollbars="vertical"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/add_post_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:drawable/ic_menu_camera"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp">
            <Button
                android:id="@+id/dialogButtonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="#78b6c2"
                android:textColor="#fff"
                android:layout_margin="5dp"
                android:background="@drawable/dialog"/>
            <Button
                android:id="@+id/dialogButtonCencel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="#888"
                android:textColor="#fff"
                android:layout_margin="5dp"
                android:background="@drawable/dialog"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>

