<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itc.iblog.fragments.LoginFragment">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img"
        android:paddingBottom="2dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="50dp"
            tools:context=".activities.MainActivity">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="-10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/iblog"
                    android:textAlignment="gravity"
                    android:textColor="#fff"
                    android:textSize="40sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_password_msg"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:height="60dp"
                    android:background="@drawable/edit_text"
                    android:focusable="true"
                    android:hint="@string/email_address"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textColorHighlight="#fff"
                    android:textColorHint="#fff" />


                <Button
                    android:id="@+id/button_send"
                    android:text="@string/reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="50dp"
                    android:height="40dp"
                    android:background="@drawable/edit_text"
                    android:backgroundTint="#fff"
                    android:focusable="true"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_cyclic_login"
                android:theme="@style/ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>


</FrameLayout>
